ephy-web-view: remove close-requested signal

WebKitWebView has a ::close-web-view signal for the same thing.

The only user of this was ephy-window, for exactly the same thing that
we are already doing in ephy-web-view, when handling ::close-web-view.

https://bugzilla.gnome.org/show_bug.cgi?id=669737